# cxx26-bit-permutations

./: .clang-format  CMakeLists.txt  README.md  bit_permutations.hpp  bit_permutations_naive.hpp  test.cpp
.github/workflows/: cmake-multi-platform.yml
